<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="270dp"
    android:layout_height="270dp"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="5dp"
    android:background="@drawable/bg_main"
    >

    <TextView
        android:id="@+id/tv_close_popup"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="end"
        android:layout_marginEnd="14dp"
        android:gravity="center"
        android:text="@string/close"
        android:textColor="@color/white"
        android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/viewReward"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="16sp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:orientation="horizontal">
            <androidx.appcompat.widget.AppCompatButton
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:id="@+id/btnViewAd"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/yes"
                android:background="@drawable/btn_bg"
                android:textColor="@color/white"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"

                />
            <androidx.appcompat.widget.AppCompatButton
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:id="@+id/btnClose"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/closeAds"
                android:background="@drawable/btn_bg"
                android:textColor="@color/white"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                />

        </LinearLayout>


</LinearLayout>